@@ -1,4 +1,6 @@
 31-01-2007 Qball <Qball@Sarine.nl>
+	* src/main.c:	Ignore MPD_ACK_ERROR_EXISTS errors so playlist out of
+	sync is handled less obstructive. (it does seem to correct itself anyway)
 	* src/playlist-list.c:	Don't crash if you can't fetch the song.
 	* src/main.c:	Stop error message spammage
 
